Testing hover fix on mobile 2.

--- a/style.css
+++ b/style.css
@@ -92,13 +92,12 @@ button:hover{
   color: yellow;
   transform: scale(104%) ;
 }
-@media (hover: none){
-  button{
+button:active{
     box-shadow: 0;
     transform: scale(100%) ;
     color:gold;
   }
-}
+
 
 #btonNewGame{
   color:white;
